# libcadgl

./: .gitignore  Makefile.am  README.md  configure.ac
doc/: Doxyfile.in  description_ru.tex
include/: cadgl.h  line_stipple.h  line_style.h  rect.h
m4/: check_gdi.m4  check_gl.m4  check_glfw.m4  check_glm.m4
src/: cadgl.cpp
src/calc/: calc.cpp  calc.h
src/graphic/: canvas.cpp  canvas.h  opengl.cpp  opengl.h  tga.h
tests/: test1  test2  test3  test4  test5  test6  testcalc.cpp  testcanvas.cpp
